--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
   image_picker: ^0.8.4+4
-
+  pdf: ^3.8.4
+  printing: ^5.9.3
 
 dev_dependencies:
   flutter_test:
